# c_midi

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
inc/: message.h  note.h  parser.h
inc/cmidi/: control.h  decoder.h  encoder.h  message.h  note.h
src/: control.h  decoder.c  encoder.c  message.c  message.h  note.c  note.h  parser.c
tst/: decoder.test.c  encode_decode_roundtrip.test.c  encoder.test.c  message.test.c  note.test.c  parser.test.c  test_common.c  test_common.h
